# sql-optimizer-big-query

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  kube-config.yaml  pyproject.toml
.github/workflows/: docker-push-deploy.yml
docker/: Dockerfile  Dockerfile-smolagents
src/: bq_client.py  env_setup.py  main.py  models.py  sql_analyzer.py  utils.py
src/common/: bq_client.py  constants.py  env_setup.py  models.py  sql_analyzer.py  utils.py
src/crewai/: analyze_sql_flow.py  bq_client.py  main.py  models.py  reflective_crew.py  sql_analyzer.py  sql_optimizer_crew.py  sql_optimizer_planning_crew.py
src/crewai/config/: agents.yaml  planning_tasks.yaml  reflective_loop.yaml  tasks.yaml
src/crewai/tools/: sql_tools.py
src/lgraph/: bq_client.py  main.py  main_dynamic.py  main_streaming_example.py  models.py  sql_analyzer.py
src/lgraph/templates/: index.html  index_streaming.html
src/smolagents/: README.md  agent.py  bq_client.py  demo_app.py  input_samples.py  main.py  models.py  requirements.txt  tools.py
src/smolagents/llm_model/: gemini.py  openai.py
src/smolagents/telemetry/: agentops_telemetry.py  evidently_telemetry.py  langfuse_telemetry.py  langsmith_telemetry.py  phoenix_telemetry.py  weave_telemetry.py
src/templates/: index.html
